automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -30,23 +30,45 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# State you null and alternative hypotheses\n"
+    "State you null and alternative hypotheses\n",
+    "\n",
+    "The average time it takes to rent a car on the website is 60 seconds."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from math import sqrt\n",
+    "import numpy as np\n",
+    "import scipy.stats as stats"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-3.0\n",
+      "0.0013498980316300933\n"
+     ]
+    }
+   ],
+   "source": [
     "# Your solution here\n",
-    "\n",
-    "\n",
+    "z = (60 - 75)/(30/sqrt(36))\n",
+    "p = stats.norm.cdf(z)\n",
+    "print(z)\n",
+    "print(p)\n",
     "# (p = 0.0013498980316301035, z = 3.0)"
    ]
   },
@@ -57,7 +79,8 @@
    "outputs": [],
    "source": [
     "# Interpret the results in terms of p-value obtained\n",
-    "\n"
+    "\n",
+    "Since the P-value is less then the threshhold we can reject the null hypothesis that a car takes more than 60 seconds to rent online."
    ]
   },
   {
@@ -89,17 +112,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# State your hypotheses \n"
+    "# State your hypotheses \n",
+    "Ho: Taking an SAT prep course will increase your SAT score.\n",
+    "Ha: SAT prep courses have no impact on your SAT score."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: '434,694,457,534,720,400,484,478,610,641,425,636,454,514,563,370,499,640,501,625,612,471,598,509,531'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-28-5e98abe91657>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Give your solution here\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mprep_scores\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprep_scores\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreplace\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m' '\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m','\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mz\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 10: '434,694,457,534,720,400,484,478,610,641,425,636,454,514,563,370,499,640,501,625,612,471,598,509,531'"
+     ]
+    }
+   ],
    "source": [
     "# Give your solution here \n",
-    "\n",
+    "prep_scores = [int(prep_scores.replace(' ',','))]\n",
+    "z = ()\n",
     "\n",
     "\n",
     "# p = 0.03593031911292577, z = 1.8"
@@ -147,7 +192,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
